# cmine

./: CMakeLists.txt  README.md  cmine.sln
cmine/: app.c  app.h  app_run.c  app_run.h  arena.c  arena.h  chunk.c  chunk.h  chunk_vsh.glsl  cmine.vcxproj  cmine.vcxproj.filters  cpp.hint  engine.c  engine.h  fixed_types.h  gl_error.c  gl_error.h  glad.c  glfw_error.c  glfw_error.h  image.c  image.h  input.h  main.c  main_menu.c  main_menu.h  main_menu_run.c  main_menu_run.h  mat.h  mat_math.h  mathf.h  mathi.h  perlin.c  perlin.h  random.c  render.c  render.h  safety.c  safety.h  sprite.c  (+8 more)
include/: alloc.h  angle.h  app.h  arena.h  block.h  chunk.h  config.h  context.h  dir.h  fixed_types.h  gl_error.h  glad.h  image.h  input.h  keys.h  mat.h  mathf.h  perlin.h  quat.h  render.h  safety.h  types.h  vec.h  vmath.h
resources/: chunk_fsh.glsl  chunk_gsh.glsl  chunk_vsh.glsl  ui_fsh.glsl
src/: CMakeLists.txt  app.c  arena.c  chunk.c  context.c  gl_error.c  image.c  input.c  main.c  main_menu_run.c  perlin.c  random.c  render.c  safety.c  sprite.c  world_run.c
